Fixed shadow overlapping tabs

--- a/wp-content/themes/cowobo/style.css
+++ b/wp-content/themes/cowobo/style.css
@@ -93,11 +93,12 @@ form {margin:0 auto;}
 
 /* Page Styles */
 .page  {position:relative;}
-.shadow  {position:absolute; top:0; bottom:0; width:100%; height:60px; background:url(images/shadow.png) top repeat-x; z-index:11;}
+.shadow  {position:absolute; top:0; left:0; width:100%; height:60px; background:url(images/shadow.png) top repeat-x; z-index:11;}
+.feed .shadow {top: -15px;}
 .dragbar {position:relative; height:15px; cursor: n-resize; background:#fff; z-index:50;}
 .feed {position:relative; width:620px; margin:0 auto 0 auto; background:#fff; overflow:hidden; padding:20px; z-index:10; }
-.background {position:absolute; top:0px; left:0; width:100%; height:100%; background:#fff; opacity:0.6; overflow:hidden;}
-.pagesource {position:relative; margin-top:30px; text-align:left; direction:ltr; color:#999; z-index:3}
+.background {position:absolute; top:0px; left:0; width:100%; height:100%; background:#fff; overflow:hidden; z-index:1;}
+.pagesource {position:relative; margin-top:30px; text-align:left; direction:ltr; color:#bbb; z-index:3}
 .unselectable {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;}
 .rownumbers {float:left; color:#ccc; text-align:right; width:20px; margin:30px 15px 0 0; height:100%; font-size:13px}
 
@@ -122,7 +123,7 @@ form {margin:0 auto;}
 .tab {background:#fff; margin-bottom:30px; clear:both; }
 .tabthumb {width:140px; height:100px; cursor:pointer; background:#eee; overflow:hidden;}
 .tabthumb {text-align:center; line-height:90px; font-size:100px; color:#ccc; margin-bottom:20px}
-.tabtext {width:460px; height:100px; background:#fff; overflow:hidden; margin-bottom:20px}
+.tabtext {position:relative; width:460px; height:100px; overflow:hidden; margin-bottom:20px; z-index:100;}
 .nextthumb {float:left; width:40px; height:30px; overflow:hidden; background:#eee;}
 .thumb {overflow:hidden; background:#eee; opacity:0.9; display:block;}
 .gallery {overflow:hidden; width:630px;}
